--- a/.gitattributes
+++ b/.gitattributes
@@ -3,5 +3,8 @@
 
 # file encodings
 *.c zos-working-tree-encoding=ibm-1047 git-encoding=utf-8
+*.h zos-working-tree-encoding=ibm-1047 git-encoding=utf-8
+*.s zos-working-tree-encoding=ibm-1047 git-encoding=utf-8
+makefile zos-working-tree-encoding=ibm-1047 git-encoding=utf-8
 *PRO zos-working-tree-encoding=ibm-1047 git-encoding=utf-8
 *EPI zos-working-tree-encoding=ibm-1047 git-encoding=utf-8
