--- a/.gitattributes
+++ b/.gitattributes
@@ -2,9 +2,11 @@
 * text eol=lf
 
 # file encodings
+.gitattributes zos-working-tree-encoding=iso8859-1 git-encoding=utf-8
 *.c zos-working-tree-encoding=ibm-1047 git-encoding=utf-8
 *.h zos-working-tree-encoding=ibm-1047 git-encoding=utf-8
 *.s zos-working-tree-encoding=ibm-1047 git-encoding=utf-8
+*.rex zos-working-tree-encoding=ibm-1047 git-encoding=utf-8
 makefile zos-working-tree-encoding=ibm-1047 git-encoding=utf-8
 *PRO zos-working-tree-encoding=ibm-1047 git-encoding=utf-8
 *EPI zos-working-tree-encoding=ibm-1047 git-encoding=utf-8
