--- a/src/makefile
+++ b/src/makefile
@@ -5,7 +5,9 @@ LD = ld
 CFLAGS = -qin=all:nostp -qfloat=ieee "-Wc,supp(CCN3415,CCN3571)" -S -qmetal -qnosearch -I /usr/include/metal
 CFLAGS64 = -q64 -qfloat=ieee -qasm -qasmlib=agilify.maclib:sys1.maclib:sys1.modgen -qin=all:nostp "-Wc,supp(CCN3415,CCN3571)" "-Wl,dll"
 LFLAGS =
-FILES = pckmo
+FILES = alloc alloc4k cmpsc cmpsc3 copyin copyout dfltcc dfltcc3 floatin floatout free kdsa kdsa3 kimd kimd3 \
+        klmd klmd3 km km3 kma kma3 kmac kmac3 kmc kmc3 kmctr kmctr3 kmf kmf3 kmo kmo3 nnpa nnpa3 pcc pcc3 pfpo \
+        prno prno3 sortl sortl3 stck stcke stckf vcfn vclfnh vclfnl vcnf vcrnf pckmo
 
 macho : $(FILES:+".exe") machopc.exe macpcreg.exe
 	touch macho
