Avoid clash with C free()

--- a/src/makefile
+++ b/src/makefile
@@ -12,9 +12,9 @@ CC = xlc
 LD = ld
 CFLAGS = -qin=all:nostp -qfloat=ieee "-Wc,supp(CCN3415,CCN3571)" -S -qmetal -qnosearch -I /usr/include/metal
 CFLAGS64 = -q64 -qfloat=ieee -qasm -qasmlib=$(MISSING):sys1.maclib:sys1.modgen -qin=all:nostp "-Wc,supp(CCN3415,CCN3571)" "-Wl,dll"
-LFLAGS =
+LFLAGS = -breus=rent
 
-FILES = alloc alloc4k cmpsc cmpsc3 copyin copyout dfltcc dfltcc3 extract floatin floatout free kdsa kdsa3 kimd kimd3 \
+FILES = alloc alloc4k cmpsc cmpsc3 copyin copyout dfltcc dfltcc3 extract floatin floatout mcfree kdsa kdsa3 kimd kimd3 \
         klmd klmd3 km km3 kma kma3 kmac kmac3 kmc kmc3 kmctr kmctr3 kmf kmf3 kmo kmo3 nnpa nnpa3 pcc pcc3 pckmo pfpo \
         prno prno3 qedit sortl sortl3 stck stcke stckf vcfn vclfnh vclfnl vcnf vcrnf wait
 
